--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -8,13 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.example.admin.simplefragment.MainActivity">
+
+    <TextView
+        android:text="Main Activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!--
     <fragment
-        android:id="@+id/details_fragment"
+        android:id="@+id/main_fragment"
         class="com.example.admin.simplefragment.BlankFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <fragment
+        android:id="@+id/main_fragment2"
+        class="com.example.admin.simplefragment.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>-->
+
+</LinearLayout>
